fix(event)：修复事件卡牌演出动画不显示图片的问题。